<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text_book">Libros</string>
    <string name="text_magazine">Revistas</string>
    <string name="navigaton_Text_myBooks">Mis libros</string>
    <string name="app_name">ReadMe</string>
    <string name="Loret">Loret</string>
    <string name="Loret_Ipsum">« Lorem ipsum dolor sit amet, consectetur adipisci elit,
        sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
        commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore
        eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa
        qui officia deserunt mollit anim id est laborum. »</string>
    <string name="textView_register">Registrarse</string>
    <string name="text_name">Nombre</string>
    <string name="text_user">Nombre de usuario</string>
    <string name="text_email">Email</string>
    <string name="text_password">Contraseña</string>
    <string name="text_phone">Número de teléfono</string>
    <string name="text_btnRegistrarse">Registrarse</string>
    <string name="text_btnIngresar">Ingresar</string>
    <string name="text_btnUpdate">Actualizar</string>
    <string name="text_btnCancel">Cancelar</string>
    <string name="text_btnGuardar">Guardar</string>
    <string name="text_login">Login</string>
    <string name="text_Not_Account">¿No tienes una cuenta?</string>
    <string name="text_createAccount">Crea cuenta</string>
    <string name="error_app">Ops!</string>
    <string name="error_app_description">Lo sentimos, esta pantalla no esta disponible. Estamos trabajando en ello...</string>
    <string name="text_act4txv_recently">Leído recientemente</string>
    <string name="text_act4txv_myLiterature">Mi bilioteca</string>
    <string name="text_article">Mis artículos</string>
    <string name="text_recover_password">Recuperar contraseña</string>
    <string name="text_btn_recover_password">Recuperar contraseña</string>
    <string name="text_desc_recover_password">Intruduce tu email y te enviaremos las instrucciones para recuperar tu contraseña</string>
    <string name="text_recover_pass">¿Olvidaste tu contraseña?</string>
    <string name="text_accept_terms">Aceptar Terminos y Condiciones</string>
    <string name="text_read_terms">Ver Terminos y Condiciones</string>

    <string name="act3txv">Lo nuevo</string>
    <string name="act3txv1">Te podría interesar</string>
    <string name="act3txv2">Lo más buscados</string>

    <string name="act3Home_text_button_selectGenre">Selecciona tus géneros preferidos para mostrarte titulos de tu interés</string>

    <string name="navigaton_Text_myLiterature">Biblioteca</string>
    <string name="navigaton_Text_home">Tienda</string>
    <string name="navigaton_Text_settings">Ajustes</string>

    <!-- Variables Card_Literature_selected -->
    <string name="text_card_button_buy">Comprar</string>
    <string name="text_card_button_preview">Vista previa</string>

    <string name="delete">Eliminar</string>
    <string name="share">Compartir</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar</string>
    <string name="delete_element">Deleting element</string>
    <string name="sharing_element">Sharing element</string>
    <string name="user">Usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="drawer.home">Editar perfil</string>
    <string name="drawer.account">Cuenta</string>
    <string name="drawer.payments">Pago</string>
    <string name="drawer.settings">Configuración</string>
    <string name="drawer.logout">Cerrar sesión</string>
    <string name="drawer.extra">Adicional</string>
    <string name="drawer.about">Acerca de</string>
    <string name="drawer.privacy">Privacidad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment genaro</string>

    <string name="prueba">%1$s!</string>EditProfile
    <string name="EditProfile">Editar perfil</string>
    <string name="text_card">Número de tarjeta</string>
    <string name="text_dateCard">Expriación</string>
    <string name="text_cvv">CVV</string>
    <string name="text_nameCard">Nombre titular</string>
    <string name="version">Versión 1.0</string>
    <string name="author">BEDU - Equipo 11</string>
    <string name="authorEric">Eric</string>
    <string name="authorGenaro">Genaro</string>
    <string name="authorJanner">Janner</string>
    <string name="authorYess">Yess</string>
    <string name="privacy">Legal and privacy<br/>End user license Agreement </string>
    <string name="textPrivacy"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum EContrary to popular belief, Lorem
        Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
        a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage,
        and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from
        sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="text_search_book">Eliminar</string>
</resources>