<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act2_signin"><ImageView
    android:id="@+id/imageView"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_marginTop="45dp"
    android:scaleType="fitCenter"
    android:src="@drawable/logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/adorno"
        android:layout_width="286dp"
        android:layout_height="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/adorno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="open_sans"
        android:text="@string/lblRegistrarse"
        android:textSize="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/editText"
        android:layout_marginTop="30dp"
        android:background="@drawable/textview_redondo"
        android:ems="10"
        android:hint="@string/text_name"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrarse" />

    <EditText
        android:id="@+id/editTextUserName"
        style="@style/editText"
        android:layout_marginTop="14dp"
        android:background="@drawable/textview_redondo"
        android:ems="10"
        android:hint="@string/text_user"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        style="@style/editText"
        android:layout_marginTop="14dp"
        android:background="@drawable/textview_redondo"
        android:ems="10"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        style="@style/editText"
        android:layout_marginTop="14dp"
        android:background="@drawable/textview_redondo"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" />

    <EditText
        android:id="@+id/editTextPhone"
        style="@style/editText"
        android:layout_marginTop="14dp"
        android:background="@drawable/textview_redondo"
        android:ems="10"
        android:hint="@string/text_phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_redondo"
        android:text="@string/text_btnRegistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>