<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo_app"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_recover_password"
        android:textSize="26sp"
        android:textColor="@color/primary2"
        android:fontFamily="@font/open_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app" />

    <TextView
        android:id="@+id/textView_account"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_desc_recover_password"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:gravity="center"
        android:fontFamily="@font/open_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_email_recovery"
        style="@style/edit_text_recover_password"
        android:hint="@string/text_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@color/neutral6"

        >

        <EditText
            android:id="@+id/editText_email_recover"
            style="@style/edit_text_login"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_recover_password"
        style="@style/buttom_login_recover"
        app:cornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/textInput_email_recovery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_btn_recover_password"
        />

    <ImageView
        android:id="@+id/icon_arrow"
        style="@style/icon_arrow"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_recover_password" />





</androidx.constraintlayout.widget.ConstraintLayout>