<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_book"
                android:layout_width="match_parent"
                style="@style/TextView_home"
                android:text="@string/text_book"
                app:layout_constraintTop_toBottomOf="parent"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/slider_books"
                android:layout_width="match_parent"
                style="@style/Slider_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_book"
                />

            <TextView
                android:id="@+id/textView_magazine"
                android:layout_width="match_parent"
                style="@style/TextView_home"
                android:text="@string/text_magazine"
                app:layout_constraintTop_toBottomOf="@id/slider_books"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/slider_magazine"
                android:layout_width="match_parent"
                style="@style/Slider_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_magazine"/>


            <TextView
                android:id="@+id/textView_article"
                android:layout_width="match_parent"
                style="@style/TextView_home"
                android:text="@string/text_article"
                app:layout_constraintTop_toBottomOf="@id/slider_magazine"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/slider_article"
                android:layout_width="match_parent"
                style="@style/Slider_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_article"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>