<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Logo -->
    <LinearLayout
        android:layout_margin="8dp"
        android:id="@+id/act4MyBooksLogoLayoutTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo" />

        <TextView
            style="@style/LogoTxV"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/act3HomeLogoImageView"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/act4MyBooksSepartor"
        app:layout_constraintTop_toBottomOf="@+id/act4MyBooksLogoLayoutTopBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_book"
                style="@style/TextView_home"
                android:layout_width="match_parent"
                android:text="@string/text_book"
                app:layout_constraintTop_toBottomOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/slider_books"
                style="@style/Slider_home"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_book" />

            <TextView
                android:id="@+id/textView_magazine"
                style="@style/TextView_home"
                android:layout_width="match_parent"
                android:text="@string/text_magazine"
                app:layout_constraintTop_toBottomOf="@id/slider_books" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/slider_magazine"
                style="@style/Slider_home"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_magazine" />


            <TextView
                android:id="@+id/textView_article"
                style="@style/TextView_home"
                android:layout_width="match_parent"
                android:text="@string/text_article"
                app:layout_constraintTop_toBottomOf="@id/slider_magazine" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/slider_article"
                style="@style/Slider_home"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_article" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/act4MyBooksSepartor"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/neutral3"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/act4MyBooksFooter"
        app:layout_constraintStart_toStartOf="parent" />

    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/act4MyBooksFooter"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        app:activeItem="0"
        app:iconSize="24dp"
        app:iconTint="@color/neutral3"
        app:iconTintActive="@color/primary1"
        app:indicatorColor="#ECECEC"
        app:indicatorRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu"
        app:textColor="@color/primary1"
        app:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>